--- a/IaC/xpipe-sindria/xpipe-auth/ingress.yaml
+++ b/IaC/xpipe-sindria/xpipe-auth/ingress.yaml
@@ -1,26 +1,26 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: xpipe-gateway
-  namespace: xpipe-demo
+  name: xpipe-auth
+  namespace: xpipe-sindria
   labels:
-    app: xpipe-gateway
+    app: xpipe-auth
   #annotations:
   #  nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
 spec:
   ingressClassName: nginx
   rules:
-  - host: demo-api-xpipe.sindria.org
+  - host: sindria-auth-xpipe.sindria.org
     http:
       paths:
         -  path: /
            pathType: Prefix
            backend:
             service:
-              name: xpipe-gateway
+              name: xpipe-auth
               port:
-                number: 80
+                number: 8080
   tls:
   - hosts:
-    - demo-api-xpipe.sindria.org
+    - sindria-auth-xpipe.sindria.org
     secretName: tls-sindria
