--- a/IaC/xpipe-sindria/xpipe-cmf/deployment.yaml
+++ b/IaC/xpipe-sindria/xpipe-cmf/deployment.yaml
@@ -3,15 +3,15 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: xpipe-auth
-  name: xpipe-auth
-  namespace: xpipe-demo
+    app: xpipe-cmf
+  name: xpipe-cmf
+  namespace: xpipe-sindria
 spec:
   replicas: 1
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      app: xpipe-auth
+      app: xpipe-cmf
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -20,63 +20,48 @@ spec:
   template:
     metadata:
       labels:
-        app: xpipe-auth
+        app: xpipe-cmf
     spec:
       imagePullSecrets:
       - name: sindria-dockerhub
       containers:
       - env:
-        - name: PROXY_ADDRESS_FORWARDING
+        - name: XPIPE_EXAMPLE
           valueFrom:
             configMapKeyRef:
-              key: KEYCLOAK_PROXY_ADDRESS_FORWARDING
-              name: xpipe-auth-config
-        - name: DB_VENDOR
-          valueFrom:
-            configMapKeyRef:
-              key: KEYCLOAK_DB_VENDOR
-              name: xpipe-auth-config
-        #- name: KEYCLOAK_IMPORT
-        #  valueFrom:
-        #    configMapKeyRef:
-        #      key: KEYCLOAK_IMPORT
-        #      name: xpipe-auth-config
-        - name: KEYCLOAK_USER
+              key: XPIPE_EXAMPLE
+              name: xpipe-cmf-config
+        - name: XPIPE_CORE_AUTH_CLIENT_ID
           valueFrom:
             secretKeyRef:
-              key: KEYCLOAK_USER
-              name: xpipe-auth-secret
-        - name: KEYCLOAK_PASSWORD
+              key: XPIPE_CORE_AUTH_CLIENT_ID
+              name: xpipe-cmf-secret
+        - name: XPIPE_CORE_AUTH_CLIENT_SECRET
           valueFrom:
             secretKeyRef:
-              key: KEYCLOAK_PASSWORD
-              name: xpipe-auth-secret
-        - name: DB_DATABASE
+              key: XPIPE_CORE_AUTH_CLIENT_SECRET
+              name: xpipe-cmf-secret
+        - name: XPIPE_CORE_CMF_DB_HOST
           valueFrom:
             secretKeyRef:
-              key: KEYCLOAK_DB_DATABASE
-              name: xpipe-auth-secret
-        - name: DB_ADDR
+              key: XPIPE_CORE_CMF_DB_HOST
+              name: xpipe-cmf-secret
+        - name: XPIPE_CORE_CMF_DB_DATABASE
           valueFrom:
             secretKeyRef:
-              key: KEYCLOAK_DB_ADDR
-              name: xpipe-auth-secret
-        - name: DB_PORT
+              key: XPIPE_CORE_CMF_DB_DATABASE
+              name: xpipe-cmf-secret
+        - name: XPIPE_CORE_CMF_DB_USERNAME
           valueFrom:
             secretKeyRef:
-              key: KEYCLOAK_DB_PORT
-              name: xpipe-auth-secret
-        - name: DB_USERNAME
+              key: XPIPE_CORE_CMF_DB_USERNAME
+              name: xpipe-cmf-secret
+        - name: XPIPE_CORE_CMF_DB_PASSWORD
           valueFrom:
             secretKeyRef:
-              key: KEYCLOAK_DB_USERNAME
-              name: xpipe-auth-secret
-        - name: DB_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              key: KEYCLOAK_DB_PASSWORD
-              name: xpipe-auth-secret
-        image: sindriainc/keycloak:1.0.0-15.0.2
+              key: XPIPE_CORE_CMF_DB_PASSWORD
+              name: xpipe-cmf-secret
+        image: sindriaproject/xpipe-cmf:1.0.0
         imagePullPolicy: Always
         #securityContext:
         #  capabilities:
@@ -92,9 +77,9 @@ spec:
         #  periodSeconds: 10
         #  successThreshold: 1
         #  timeoutSeconds: 1
-        name: xpipe-auth
+        name: xpipe-cmf
         ports:
-        - containerPort: 8080
+        - containerPort: 80
           protocol: TCP
         #readinessProbe:
         #  failureThreshold: 3
@@ -108,22 +93,22 @@ spec:
         #  timeoutSeconds: 1
         resources:
           limits:
-            memory: 4096Mi
+            memory: 1024Mi
           requests:
-            memory: 4096Mi
+            memory: 1024Mi
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         #volumeMounts:
         #- mountPath: /tmp/cmf
-        #  name: xpipe-auth-volume
+        #  name: xpipe-cmf-volume
       dnsPolicy: ClusterFirst
       #hostNetwork: true
       restartPolicy: Always
       schedulerName: default-scheduler
       terminationGracePeriodSeconds: 30
       #volumes:
-      #- name: xpipe-auth-volume
+      #- name: xpipe-cmf-volume
       #  persistentVolumeClaim:
-      #    claimName: xpipe-auth-pvc
+      #    claimName: xpipe-cmf-pvc
       #    #defaultMode: 420
 ---
