Routines: update xpipe-no-certs-route53

--- a/Routines/xpipe-no-certs-route53/.env.local
+++ b/Routines/xpipe-no-certs-route53/.env.local
@@ -2,11 +2,12 @@
 HOST_USER_UID=1000
 
 # System Configuration
-BASE_PATH=/home/ubuntu/xdev/storage/Projects
+#BASE_PATH=/home/ubuntu/xdev/storage/Projects
+BASE_PATH=/Users/lucapitzoi/Projects
 
 # APP Configuration
-APP_NAME=build-certs-route53
-APP_DOMAIN=build-certs-route53.local
+APP_NAME=xpipe-no-certs-route53
+APP_DOMAIN=xpipe-no-certs-route53.local
 APP_CODE_PATH=/var/www/app
 APP_LOGS_PATH=./storage/logs
 APP_DATA_PATH=./storage/data
@@ -39,7 +40,7 @@ IAC_LIVE_CACHE=
 IAC_CURRENT_INFRA=
 
 # Local
-PROJECT_PATH=Sindria/sindria-devops-lab/iac-components/build-certs-route53
+PROJECT_PATH=Sindria/XPipe/Routines/xpipe-no-certs-route53
 CODE_PATH=src
 
 # Pycharm
