Routines: update xpipe-no-certs-route53

--- a/Routines/xpipe-no-certs-route53/src/Dockerfile
+++ b/Routines/xpipe-no-certs-route53/src/Dockerfile
@@ -1,6 +1,5 @@
 ARG ARCH
-#FROM ${ARCH}/certbot/dns-route53:latest
-FROM certbot/dns-route53:latest
+FROM certbot/dns-route53:${ARCH}-v2.9.0
 
 ARG TAG_VERSION
 ARG TIMEZONE
