--- a/Routines/xpipe-no-certs-azure/.env.local
+++ b/Routines/xpipe-no-certs-azure/.env.local
@@ -2,7 +2,8 @@
 HOST_USER_UID=1000
 
 # System Configuration
-BASE_PATH=/home/ubuntu/xdev/storage/Projects
+#BASE_PATH=/home/ubuntu/xdev/storage/Projects
+BASE_PATH=/Users/lucapitzoi/Projects
 
 # APP Configuration
 APP_NAME=build-certs-azure
@@ -43,7 +44,7 @@ IAC_CERTBOT_EMAIL=devops@example.com
 IAC_CERTBOT_DOMAIN=example.com
 
 # Local
-PROJECT_PATH=Sindria/sindria-devops-lab/iac-components/build-certs-azure
+PROJECT_PATH=Sindria/XPipe/Routines/xpipe-no-certs-azure
 CODE_PATH=src
 
 # Pycharm
