--- a/Routines/xpipe-no-certs-ovh/.env.local
+++ b/Routines/xpipe-no-certs-ovh/.env.local
@@ -2,7 +2,8 @@
 HOST_USER_UID=1000
 
 # System Configuration
-BASE_PATH=/home/ubuntu/xdev/storage/Projects
+#BASE_PATH=/home/ubuntu/xdev/storage/Projects
+BASE_PATH=/Users/lucapitzoi/Projects
 
 # APP Configuration
 APP_NAME=build-certs-ovh
@@ -39,7 +40,7 @@ IAC_LIVE_CACHE=
 IAC_CURRENT_INFRA=
 
 # Local
-PROJECT_PATH=Sindria/sindria-devops-lab/iac-components/build-certs-ovh
+PROJECT_PATH=Sindria/XPipe/Routines/xpipe-no-certs-ovh
 CODE_PATH=src
 
 # Pycharm
