--- a/APM/kubernetes-node-exporter/service.yaml
+++ b/APM/kubernetes-node-exporter/service.yaml
@@ -8,6 +8,7 @@ metadata:
       prometheus.io/scrape: 'true'
       prometheus.io/port:   '9100'
 spec:
+  clusterIP: None
   selector:
       app.kubernetes.io/component: exporter
       app.kubernetes.io/name: node-exporter
