--- a/APM/xpipe-standalone/prometheus/prometheus.yml
+++ b/APM/xpipe-standalone/prometheus/prometheus.yml
@@ -35,33 +35,26 @@ scrape_configs:
   #    - targets: ['host.docker.internal:8000']
 
   - job_name: 'prometheus'
-
     # Override the global default and scrape targets from this job every 5 seconds.
     scrape_interval: 5s
-
     static_configs:
          - targets: ['localhost:9090']
 
 
-  - job_name: 'advisor'
-
-    # Override the global default and scrape targets from this job every 5 seconds.
-    scrape_interval: 5s
-
-    dns_sd_configs:
-    - names:
-      - 'tasks.advisor'
-      type: 'A'
-      port: 8080
-
-    static_configs:
-        - targets: ['apm-advisor.local:8080']
+  #- job_name: 'advisor'
+  #  # Override the global default and scrape targets from this job every 5 seconds.
+  #  scrape_interval: 5s
+  #  dns_sd_configs:
+  #  - names:
+  #    - 'tasks.advisor'
+  #    type: 'A'
+  #    port: 8080
+  #  static_configs:
+  #      - targets: ['apm-advisor.local:8080']
 
   - job_name: 'self'
-
     # Override the global default and scrape targets from this job every 5 seconds.
     scrape_interval: 5s
-
     dns_sd_configs:
     - names:
       - 'tasks.self'
@@ -79,17 +72,25 @@ scrape_configs:
     static_configs:
         - targets: ['apm-self.local:9100']
 
-  - job_name: 'monitoring'
 
+  - job_name: 'vpn'
     # Override the global default and scrape targets from this job every 5 seconds.
     scrape_interval: 5s
+    dns_sd_configs:
+      - names:
+          - 'tasks.vpn'
+        type: 'A'
+        port: 9100
+    static_configs:
+      - targets: [ 'vpn.sindria.corp:9100' ]
 
+  - job_name: 'monitoring'
+    # Override the global default and scrape targets from this job every 5 seconds.
+    scrape_interval: 5s
     dns_sd_configs:
       - names:
           - 'tasks.monitoring'
         type: 'A'
         port: 9100
-
     static_configs:
-        #- targets: [ '149.202.64.139:9100', '54.37.245.46:9100', '51.195.61.85:9100' ]
-        - targets: [ 'wopr-lab-ph-lnx-wrk-1.sindria.corp:9100', 'wopr-lab-ph-lnx-wrk-2.sindria.corp:9100', 'wopr-lab-ph-lnx-wrk-3.sindria.corp:9100' ]
+        - targets: [ 'wopr-lab-ph-lnx-btn-1.sindria.corp:9100', 'wopr-lab-ph-lnx-cpn-1.sindria.corp:9100', 'wopr-lab-ph-lnx-wrk-1.sindria.corp:9100', 'wopr-lab-ph-lnx-wrk-2.sindria.corp:9100', 'wopr-lab-ph-lnx-wrk-3.sindria.corp:9100' ]
