--- a/APM/kubernetes-node-exporter/daemonset.yaml
+++ b/APM/kubernetes-node-exporter/daemonset.yaml
@@ -18,14 +18,9 @@ spec:
         app.kubernetes.io/name: node-exporter
     spec:
       tolerations:
-        # these tolerations are to have the daemonset runnable on control plane nodes
-        # remove them if your control plane nodes should not run pods
-        - key: node-role.kubernetes.io/control-plane
-          operator: Exists
-          effect: NoSchedule
-        - key: node-role.kubernetes.io/master
-          operator: Exists
-          effect: NoSchedule
+        - operator: Exists
+      nodeSelector:
+        kubernetes.io/os: linux
       containers:
       - args:
         - --path.sysfs=/host/sys
