--- a/BaseImages/prometheus/src/Dockerfile
+++ b/BaseImages/prometheus/src/Dockerfile
@@ -1,8 +1,11 @@
-ARG ARCH
+ARG BUILD_ARCH
+ARG TAG_ARCH
 ARG TAG_SUFFIX
-FROM --platform=linux/${ARCH} prom/prometheus:${TAG_SUFFIX}
-#FROM prom/prometheus:${TAG_SUFFIX}
+FROM --platform=linux/${BUILD_ARCH} prom/prometheus:${TAG_SUFFIX}
 
+ARG BUILD_ARCH
+ARG TAG_ARCH
+ARG TAG_SUFFIX
 ARG TAG_VERSION
 ARG HOST_USER_UID
 ARG TIMEZONE
