BaseImages: update prometheus

--- a/BaseImages/prometheus/src/Dockerfile
+++ b/BaseImages/prometheus/src/Dockerfile
@@ -22,8 +22,22 @@ ENV TZ=${TIMEZONE}
 ENV SINDRIA_USER="sindria"
 ENV SINDRIA_USER_HOME="/home/sindria"
 
-# Setting entrypoint
-#COPY resources/bin/entrypoint.sh /usr/local/bin/entrypoint.sh
-#ENTRYPOINT ["/bin/sh", "/usr/local/bin/entrypoint.sh"]
+ENV MONITOR_LABEL="xpipe-monitor"
+ENV ALERTMANAGER_SCHEME="http"
+ENV ALERTMANAGER_HOST="monitoring-alert.local"
+ENV ALERTMANAGER_PORT="9093"
+ENV SCRAPE_CONFIG="monitoring"
+ENV SELF_TOGGLE="0"
+ENV SELF_HOST="monitoring-self.local"
+ENV SELF_PORT="9100"
+ENV MONITORING_HOSTS=""
+ENV APM_HOSTS=""
+
+COPY resources/prometheus/prometheus.yml /etc/prometheus/prometheus.yml
+COPY resources/prometheus/configs /etc/prometheus/configs
+COPY resources/prometheus/rules /etc/prometheus/rules
+
+COPY resources/bin/entrypoint.sh /usr/local/bin/entrypoint.sh
+ENTRYPOINT ["/bin/sh", "/usr/local/bin/entrypoint.sh"]
 
 CMD ["--config.file=/etc/prometheus/prometheus.yml", "--storage.tsdb.path=/prometheus", "--web.console.libraries=/usr/share/prometheus/console_libraries", "--web.console.templates=/usr/share/prometheus/consoles" ]
