Monitoring: added standalone template

--- a/Monitoring/xpipe-standalone/.env.production
+++ b/Monitoring/xpipe-standalone/.env.production
@@ -2,16 +2,16 @@
 HOST_USER_UID=1000
 
 # APP Configuration
-ENGINE_APP_NAME=apm-engine
-ENGINE_APP_DOMAIN=apm-engine.local
-SELF_APP_NAME=apm-self
-SELF_APP_DOMAIN=apm-self.local
-ALERT_APP_NAME=apm-alert
-ALERT_APP_DOMAIN=apm-alert.local
-ADVISOR_APP_NAME=apm-advisor
-ADVISOR_APP_DOMAIN=apm-advisor.local
-DASHBOARD_APP_NAME=apm-dashboard
-DASHBOARD_APP_DOMAIN=apm-dashboard.local
+ENGINE_APP_NAME=monitoring-engine
+ENGINE_APP_DOMAIN=monitoring-engine.local
+SELF_APP_NAME=monitoring-self
+SELF_APP_DOMAIN=monitoring-self.local
+ALERT_APP_NAME=monitoring-alert
+ALERT_APP_DOMAIN=monitoring-alert.local
+ADVISOR_APP_NAME=monitoring-advisor
+ADVISOR_APP_DOMAIN=monitoring-advisor.local
+DASHBOARD_APP_NAME=monitoring-dashboard
+DASHBOARD_APP_DOMAIN=monitoring-dashboard.local
 APP_CODE_PATH=/var/www/app
 APP_LOGS_PATH=./storage/logs
 APP_DATA_PATH=./storage/data
@@ -34,3 +34,15 @@ DB_SCHEMA=
 DB_ROOT_PASSWORD=secret
 DB_USERNAME=user
 DB_PASSWORD=secret
+
+# Prometheus
+MONITOR_LABEL="wopr-monitor"
+ALERTMANAGER_SCHEME="http"
+ALERTMANAGER_HOST="monitoring-alert.local"
+ALERTMANAGER_PORT="9093"
+SCRAPE_CONFIG="monitoring"
+SELF_TOGGLE="0"
+SELF_HOST="monitoring-self.local"
+SELF_PORT="9100"
+MONITORING_HOSTS="vpn.sindria.corp:9100;wopr-lab-ph-lnx-btn-1.sindria.corp:9100;wopr-lab-ph-lnx-cpn-1.sindria.corp:9100;wopr-lab-ph-lnx-wrk-1.sindria.corp:9100;wopr-lab-ph-lnx-wrk-2.sindria.corp:9100;wopr-lab-ph-lnx-wrk-3.sindria.corp:9100"
+APM_HOSTS=""
