--- a/BaseImages/prometheus/src/resources/prometheus/prometheus.yml
+++ b/BaseImages/prometheus/src/resources/prometheus/prometheus.yml
@@ -32,7 +32,7 @@ scrape_configs:
          - targets: ['localhost:9090']
 
 scrape_config_files:
-  #@@- 'configs/self.yml'
-  #- 'configs/monitoring.yml'
-  #- 'configs/apm.yml'
-  - 'configs/@@SCRAPE_CONFIG@@.yml'
+  #@@- 'self.yml'
+  #- 'monitoring.yml'
+  #- 'apm.yml'
+  - '@@SCRAPE_CONFIG@@.yml'
