Monitoring: update standalone tpl

--- a/Monitoring/xpipe-standalone/prometheus/prometheus.yml
+++ b/Monitoring/xpipe-standalone/prometheus/prometheus.yml
@@ -1,4 +1,4 @@
-# my global config
+# global config
 global:
   scrape_interval:     15s # By default, scrape targets every 15 seconds.
   evaluation_interval: 15s # By default, scrape targets every 15 seconds.
@@ -7,14 +7,11 @@ global:
   # Attach these labels to any time series or alerts when communicating with
   # external systems (federation, remote storage, Alertmanager).
   external_labels:
-      monitor: 'xpipe-apm'
+      monitor: 'wopr-monitor'
 
 # Load and evaluate rules in this file every 'evaluation_interval' seconds.
 rule_files:
-  - 'alert.rules'
-  - 'alerts/*.yml'
-  # - "first.rules"
-  # - "second.rules"
+  - 'rules/*.yml'
 
 # alert
 alerting:
