--- a/Monitoring/xpipe-standalone/prometheus/rules/host-and-hardware/global-monitoring.yml
+++ b/Monitoring/xpipe-standalone/prometheus/rules/host-and-hardware/global-monitoring.yml
@@ -1,5 +1,5 @@
 groups:
-- name: global
+- name: GlobalMonitoring
   rules:
   - alert: NodeDown
     expr: up == 0
@@ -20,14 +20,14 @@ groups:
       summary: "Service {{ $labels.instance }} down"
       description: "{{ $labels.instance }} of job {{ $labels.job }} has been down for more than 2 minutes."
 
-  - alert: HighLoad
-    expr: node_load1 > 0.5
-    for: 30m
-    labels:
-      severity: warning
-    annotations:
-      summary: "Instance {{ $labels.instance }} under high load"
-      description: "{{ $labels.instance }} of job {{ $labels.job }} is under high load."
+#  - alert: HighLoad
+#    expr: node_load1 > 0.5
+#    for: 30m
+#    labels:
+#      severity: warning
+#    annotations:
+#      summary: "Instance {{ $labels.instance }} under high load"
+#      description: "{{ $labels.instance }} of job {{ $labels.job }} is under high load."
 
   - alert: DiskSpaceFree10Percent
     expr: node_filesystem_free_percent <= 10
