--- a/Monitoring/xpipe-standalone/grafana/provisioning/datasources/datasource.yml
+++ b/Monitoring/xpipe-standalone/grafana/provisioning/datasources/datasource.yml
@@ -18,7 +18,7 @@ datasources:
   # <int> org id. will default to orgId 1 if not specified
   orgId: 1
   # <string> url
-  url: http://apm-engine.local:9090
+  url: http://monitoring-engine.local:9090
   # <string> database password, if used
   password:
   # <string> database user, if used
