--- a/Monitoring/xpipe-standalone/prometheus/prometheus.yml
+++ b/Monitoring/xpipe-standalone/prometheus/prometheus.yml
@@ -19,7 +19,7 @@ alerting:
   - scheme: http
     static_configs:
     - targets:
-      - "apm-alert.local:9093"
+      - "monitoring-alert.local:9093"
 
 # A scrape configuration containing exactly one endpoint to scrape:
 # Here it's Prometheus itself.
@@ -67,7 +67,7 @@ scrape_configs:
 #      port: 9091
 
     static_configs:
-        - targets: ['apm-self.local:9100']
+        - targets: ['monitoring-self.local:9100']
 
 
   - job_name: 'vpn'
