BaseImages: update prom

--- a/BaseImages/prometheus/src/resources/prometheus/prometheus.yml
+++ b/BaseImages/prometheus/src/resources/prometheus/prometheus.yml
@@ -11,7 +11,64 @@ global:
 
 # Load and evaluate rules in this file every 'evaluation_interval' seconds.
 rule_files:
-  - 'rules/*.yml'
+  #- 'rules/*.yml'
+  - 'rules/apache/*.yml'
+  - 'rules/apc-ups/*.yml'
+  - 'rules/argocd/*.yml'
+  - 'rules/blackbox/*.yml'
+  - 'rules/cassandra/*.yml'
+  - 'rules/ceph/*.yml'
+  - 'rules/clickhouse/*.yml'
+  - 'rules/cloudflare/*.yml'
+  - 'rules/consul/*.yml'
+  - 'rules/coredns/*.yml'
+  - 'rules/cortex/*.yml'
+  - 'rules/docker-containers/*.yml'
+  - 'rules/elasticsearch/*.yml'
+  - 'rules/etcd/*.yml'
+  - 'rules/freeswitch/*.yml'
+  - 'rules/graph-node/*.yml'
+  - 'rules/hadoop/*.yml'
+  - 'rules/haproxy/*.yml'
+  - 'rules/hashicorp-vault/*.yml'
+  - 'rules/host-and-hardware/*.yml'
+  - 'rules/istio/*.yml'
+  - 'rules/jenkins/*.yml'
+  - 'rules/juniper/*.yml'
+  - 'rules/jvm/*.yml'
+  - 'rules/kafka/*.yml'
+  - 'rules/kubernetes/*.yml'
+  - 'rules/linkerd/*.yml'
+  - 'rules/loki/*.yml'
+  - 'rules/minio/*.yml'
+  - 'rules/mongodb/*.yml'
+  - 'rules/mysql/*.yml'
+  - 'rules/nats/*.yml'
+  - 'rules/netdata/*.yml'
+  - 'rules/nginx/*.yml'
+  - 'rules/nomad/*.yml'
+  - 'rules/openebs/*.yml'
+  - 'rules/patroni/*.yml'
+  - 'rules/pgbouncer/*.yml'
+  - 'rules/php-fpm/*.yml'
+  - 'rules/postgresql/*.yml'
+  - 'rules/prometheus-self-monitoring/*.yml'
+  - 'rules/promtail/*.yml'
+  - 'rules/pulsar/*.yml'
+  - 'rules/rabbitmq/*.yml'
+  - 'rules/redis/*.yml'
+  - 'rules/sidekiq/*.yml'
+  - 'rules/smart-device-monitoring/*.yml'
+  - 'rules/solr/*.yml'
+  - 'rules/speedtest/*.yml'
+  - 'rules/sqlserver/*.yml'
+  - 'rules/ssl/*.yml'
+  - 'rules/thanos/*.yml'
+  - 'rules/traefik/*.yml'
+  - 'rules/vmware/*.yml'
+  - 'rules/windows-server/*.yml'
+  - 'rules/zfs/*.yml'
+  - 'rules/zookeeper/*.yml'
 
 # alert
 alerting:
